[package]
name = "tmc2209"
version = "0.2.2"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "A driver implementation for the TMC2209 stepper motor driver by Trinamic."
readme = "../README.md"
keywords = ["trinamic", "stepper", "motor", "driver"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mitchmindtree/tmc2209.git"
homepage = "https://github.com/mitchmindtree/tmc2209"
edition = "2018"

[dependencies]
bitfield = "0.13.2"
embedded-hal = "0.2.4"
hash32 = { version = "0.1.1", optional = true }
hash32-derive = { version = "0.1", optional = true }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
ufmt = { version = "0.1.0", optional = true }

[features]
hash = ["hash32", "hash32-derive"]

[package.metadata.docs.rs]
all-features = true
